# Altera_CrowdSim

./: .~lock.changes.odt#  .~lock.kernelExecution.odt#  .~lock.problems.odt#  Errors.txt  README.md  changes.odt  changes.txt  compiled_emulated_diff.odt  documentation.docx  documentation.docx.bak~  error_fpga_flow  kernelExecution.odt  kernelExecution.txt  make  memory_hierarchy.dia  memoryusage.txt  problems.odt  results.ods
BackupWin/: RenderGL.h
CrowdSim/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CPackConfig.cmake  CPackSourceConfig.cmake  CrowdSim.cbp  CrowdSim.cl  CrowdSim2.cl  CrowdSim_CL  CrowdSim_emu.aoco  CrowdSim_emu.aocx  CrowdSim_fixedpoint.cl  CrowdSim_release.cl  CrowdSim_release_simFloat.cl  CrowdSim_small.cl  Makefile  cmake_install.cmake  compile_emu.sh  compile_hw.sh  encode.sh  set_env.sh
CrowdSim/CrowdSim/: CrowdSim.cl.orig
CrowdSim/CrowdSim_emu/: CrowdSim.1.bc  CrowdSim.bc  CrowdSim.cl.orig  CrowdSim_release.1.bc  CrowdSim_release.bc  CrowdSim_release.cl.orig  sys_description.legend.txt  sys_description.txt
CrowdSim/CrowdSim_release/reports/lib/: report_data.js
CrowdSim/RVO2/: AUTHORS  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  RVO.cbp  cmake_install.cmake
CrowdSim/RVO2/examples/: .gitignore  CTestTestfile.cmake  Makefile  cmake_install.cmake
CrowdSim/RVO2/src/: Agent.cpp  Agent.h  CTestTestfile.cmake  Definitions.h  KdTree.cpp  KdTree.h  Makefile  Obstacle.cpp  Obstacle.h  RVO.h  RVOSimulator.cpp  RVOSimulator.h  SVMAllocator.cpp  Vector2.h  cmake_install.cmake
CrowdSim/backupCL/: CrowdSim_OG.cl  CrowdSim_small.cl
CrowdSim/bin_CrowdSim/: computeNewVelocity.area  top.map.smsg  top.map.summary  top.merge.summary  update.area
CrowdSim/lib/: libpng16.la  libpng16.so.16.29.0
CrowdSim/lib/pkgconfig/: libpng16.pc  zlib.pc
CrowdSim/src/: RenderGL.cpp  SimulateCL.cpp  SimulateCL.h  cmdoptions.cpp  cmdoptions.hpp  main.cpp
CrowdSimC5/: .gitignore  CMakeLists.txt  CrowdSim.cl  fixup_generated_rtl.py  generate_hardware.sh  generate_system_files.sh  iface.tcl  postprocess_scripts.py  run_cmake.sh  set_env16_0.sh  svm_system.tcl  toolchain-arm32.cmake
CrowdSimC5/CrowdSim/: CrowdSim.1.bc  CrowdSim.bc  CrowdSim.cl.orig  sys_description.legend.txt  sys_description.txt
CrowdSimC5/RVO2/: COPYING
CrowdSimC5/RVO2/src/: Agent.cpp  Constants.h  KdTree.cpp  KdTree.h  Obstacle.h  RVOSimulator.cpp  RVOSimulator.h  SVMAllocator.h
CrowdSimC5/lib/: libpng16.so.16.29.0
CrowdSimC5/lib/pkgconfig/: libpng16.pc  zlib.pc
CrowdSimC5/src/: ParticleVS.gl  SimulateCL.cpp  cmdoptions.cpp  main.cpp
CrowdSimC5_noSVM/: CMakeLists.txt.bak  CrowdSim.cl  encode.sh  set_env.sh
CrowdSimC5_noSVM/RVO2/: README
CrowdSimC5_noSVM/RVO2/src/: Agent.cpp  Agent.h  Definitions.h  Obstacle.cpp  RVOSimulator.cpp  RVOSimulator.h
CrowdSimC5_noSVM/lib/: libpng16.la  libz.so.1.2.11
CrowdSimC5_noSVM/src/: ParticleFS.gl  SimulateCL.cpp  SimulateCL.h  cmdoptions.cpp  cmdoptions.hpp  main.cpp
common/: basic.cpp  cmdparser.hpp  oclobject.cpp
common/AOCLUtils/: aocl_utils.h  opencl.cpp  opencl.h  options.cpp
common/rtl_src/: buswidth_adaption.vhd  c_model.cl  custom_library.aoclib  fifo_ip_1.vhd  fifo_ip_256.vhd  fifo_ip_32.vhd  fifo_ip_512.vhd  host_memory_bridge.aoco  host_memory_bridge.h  host_memory_bridge_32bit_ld.vhd  host_memory_bridge_32bit_rw.vhd  host_memory_bridge_32bit_st.vhd  host_memory_bridge_512bit_ld.vhd  host_memory_bridge_512bit_rw.vhd  rtl_spec.xml
common/rtl_src/lock_server/: lock_server.vhd  lock_server_hw.tcl
common/svm_utils/: svm_utils.hpp
images/: executionpath.eps  fprelaxed.xcf  original-execution-flow.eps  pagewalk.eps  virtualmem_l2.eps
